# softbody-sim-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: DisplayManager.h  Protocol.h  Softbody.h  SoftbodySpring.h  SoftbodyVertex.h
src/: DisplayManager.cpp  Softbody.cpp  SoftbodySpring.cpp  SoftbodyVertex.cpp  main.cpp
